# Muxi

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test-core.yml  test-ios.yml
core/: CMakeLists.txt
core/tmux_protocol/: tmux_protocol.c
core/tmux_protocol/include/: tmux_protocol.h
core/vt_parser/: vt_parser.c
core/vt_parser/include/: vt_parser.h
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RELEASE.md  TERMIUS.md
docs/decisions/: 0001-tmux-control-mode.md  0002-four-layer-architecture.md  0003-metal-gpu-rendering.md  0004-swiftdata-keychain-storage.md  0005-sarasa-term-k-font.md  0006-semantic-token-design-system.md  0007-switch-client-session-switching.md  0008-window-pane-state-machine.md  0009-tailscale-embedded-userspace.md  _template.md
docs/guides/: c-style.md  design-system.md  git-workflow.md  swift-style.md  testing.md
docs/plans/: 2026-02-28-muxi-design.md  2026-02-28-muxi-implementation.md  2026-03-03-design-system-implementation.md  2026-03-03-design-system.md  2026-03-04-app-lifecycle-design.md  2026-03-04-app-lifecycle.md  2026-03-04-clipboard-paste-design.md  2026-03-04-clipboard-paste.md  2026-03-04-cursor-rendering-design.md  2026-03-04-font-bundling-design.md  2026-03-04-font-bundling.md  (+20 more)
ios/: project.yml
scripts/: build-all.sh  build-libssh2.sh  build-libtailscale.sh  build-openssl.sh  download-fonts.sh  generate-app-icon.py
(+110 files in other folders)
